Fixed the header responsiveness for flex wrap, HR still required, deleted extra flickity file

--- a/css/style.css
+++ b/css/style.css
@@ -445,10 +445,15 @@ footer .footer-left .address {
 		content: "";
 	}
 	header .nav {
-		flex-grow: 0;
-		flex-shrink: 0;
 		order: 1;
-		width: 50%;
+		width: 100%;
+		text-align: center;
+		font-size: 38px;
+	}
+	header .nav ul {
+		width: 100%;
+		margin: auto;
+		justify-content: space-evenly;
 	}
 	header .logo {
 		width: 50%;
